--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "hlist2"
 version = "0.0.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+authors = ["tuguzT <timurka.tugushev@gmail.com>"]
+repository = "https://github.com/tuguzT/hlist2"
+license = "MIT OR Apache-2.0"
+keywords = ["safe", "heterogeneous", "hlist", "no-std"]
+categories = ["data-structures", "rust-patterns", "algorithms", "no-std"]
